fixed the playlist carf clipping

--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ main {
     display: flex;
     gap: 15px;
     padding: 20px 40px;
-    margin-bottom: 210px;
+    margin-bottom: 220px;
 
 }
 
